# candle

./: Cargo.toml
candle-core/: Cargo.toml
candle-core/src/: backend.rs  cpu_backend.rs  device.rs  display.rs  dummy_cuda_backend.rs  dummy_metal_backend.rs  dummy_wgpu_backend.rs  error.rs  lib.rs  op.rs  storage.rs  tensor.rs  test_utils.rs  wgpu_backend.rs
candle-core/src/quantized/: mod.rs
candle-core/tests/: conv_tests.rs  repeat_tests.rs
candle-examples/examples/stable-diffusion/: main.rs
candle-examples/examples/yolo-v3/: darknet.rs  main.rs
candle-examples/examples/yolo-v8/: main.rs
candle-pyo3/src/: lib.rs
candle-wgpu/: Cargo.toml
candle-wgpu-kernels/: Cargo.toml
candle-wgpu-kernels/src/: affine.rs  affine.wgsl  binary_op.rs  binary_op.wgsl  common.wgsl  conv.rs  conv.wgsl  conv1d_f32.wgsl  convert.rs  convert_u32_to_f32.wgsl  convert_u8_to_f32.wgsl  copy.rs  copy.wgsl  copy_sparse.rs  copy_sparse.wgsl  fill.rs  fill.wgsl  fill_f32.wgsl  fill_u32.wgsl  fill_u8.wgsl  im2col.rs  im2col.wgsl  kernel.rs  lib.rs  random.rs  random.wgsl  repeat.rs  repeat.wgsl  unary_op.rs  unary_op.wgsl  upsample_nearest.rs  upsample_nearest.wgsl
candle-wgpu/src/: conv.wgsl  lib.rs
