[package]
name = "candle-wgpu"
version = "0.4.1"
edition = "2021"

description = "WGPU kernels for Candle"
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
smol = "2"
wgpu = "0.19"
bytemuck = "1.14"
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tracing-test = "0.2"
